#183 JIRA / Unit Testing - Homework Feature: One Proportion Confidence Interval

--- a/savis4/src/app/problems/problems-components/opci/opci.component.html
+++ b/savis4/src/app/problems/problems-components/opci/opci.component.html
@@ -29,7 +29,7 @@
         <p>2. Calculate the margin error</p>
       </div>
       <div class = "answer-box">
-        <input type="text" class = "textbox2" placeholder = "margin error" [(ngModel)] = "userMarginError">
+        <input type="text" class = "textbox3" placeholder = "margin error" [(ngModel)] = "userMarginError">
       </div>
 
       <!--user input for confidence interval-->
@@ -40,7 +40,7 @@
         <span class = "parenthesis">(</span>
         <input type="text" class = "textbox" placeholder = "Lower bound" [(ngModel)] = "userAnswerLower">
         <span class = "comma">,</span>
-        <input type="text" class = "textbox" placeholder = "Upper bound" [(ngModel)] = "userAnswerUpper">
+        <input type="text" class = "textbox1" placeholder = "Upper bound" [(ngModel)] = "userAnswerUpper">
         <span class = "parenthesis">)</span>
       </div>
 
