--- a/savis4/src/app/problems/problems-components/opci/opci.component.scss
+++ b/savis4/src/app/problems/problems-components/opci/opci.component.scss
@@ -105,7 +105,7 @@ h1{
   padding: 10px 0; 
 }
  
-.textbox {
+.textbox, .textbox1 {
   width: 200px;
   height: 30px;
   padding: 20px;
@@ -120,7 +120,7 @@ h1{
   overflow: hidden;
 }
 
-.textbox2 {
+.textbox2, .textbox3 {
   width: 500px;
   height: 30px;
   padding: 20px;
