#184 JIRA/ Unit Testing - Homework Feature: Two Proportion Confidence Interval

--- a/savis4/src/app/problems/problems-components/tpci/tpci.component.html
+++ b/savis4/src/app/problems/problems-components/tpci/tpci.component.html
@@ -29,7 +29,7 @@
         <p>2. Calculate the sample proportion for adults</p>
       </div>
       <div class = "answer-box">
-        <input type="text" class="textbox2" placeholder = "sample proportions" [(ngModel)] = "userSampleProportion2">
+        <input type="text" class="textbox3" placeholder = "sample proportions" [(ngModel)] = "userSampleProportion2">
       </div>
 
       <!--user input for difference in sample proportion-->
@@ -37,7 +37,7 @@
         <p>3. Calculate the difference between the sample proportions for teenagers and adults</p>
       </div>
       <div class = "answer-box">
-        <input type="text" class="textbox2" placeholder = " different in sample proportions" [(ngModel)] = "userDiffProportion">
+        <input type="text" class="textbox4" placeholder = " different in sample proportions" [(ngModel)] = "userDiffProportion">
       </div>
 
       <!--user input for margin error-->
@@ -45,7 +45,7 @@
         <p>4. Calculate the margin error</p>
       </div>
       <div class = "answer-box">
-        <input type="text" class="textbox2" placeholder = " margin error" [(ngModel)] = "userMarginError">
+        <input type="text" class="textbox5" placeholder = " margin error" [(ngModel)] = "userMarginError">
       </div>
 
       <!--user input for confidence interval-->
@@ -56,7 +56,7 @@
         <span class = "parenthesis">(</span>
         <input type="text" class = "textbox" placeholder = "lower bound" [(ngModel)] = "userAnswerLower">
         <span class = "comma">,</span>
-        <input type="text" class = "textbox" placeholder = "upper bound" [(ngModel)] = "userAnswerUpper">
+        <input type="text" class = "textbox1" placeholder = "upper bound" [(ngModel)] = "userAnswerUpper">
         <span class = "parenthesis">)</span>
       </div>
 
