--- a/savis4/src/app/problems/problems-components/tpci/tpci.component.scss
+++ b/savis4/src/app/problems/problems-components/tpci/tpci.component.scss
@@ -149,7 +149,7 @@ h1{
     cursor: pointer;
 }
 
-.textbox {
+.textbox, .textbox1 {
   width: 200px;
   height: 30px;
   padding: 20px;
@@ -165,7 +165,7 @@ h1{
   overflow: hidden;
 }
 
-.textbox2 {
+.textbox2, .textbox3, .textbox4, .textbox5 {
   width: 500px;
   height: 30px;
   padding: 20px;
