--- a/savis4/src/app/problems/problems-components/tmht/tmht.component.html
+++ b/savis4/src/app/problems/problems-components/tmht/tmht.component.html
@@ -31,7 +31,7 @@
       <!--submit button-->
       <button class = "submit-button" (click)="submitAnswer()">Submit Answer</button>
       <!--change question-->
-      <button class="submit-button" (click)="nextQuestion()">Change Problem</button>
+      <button class="qchange-button" (click)="nextQuestion()">Change Problem</button>
       <!--show if user answer is correct or incorrect-->
       <div *ngIf = "showAnswer" class = "answer-box" [ngClass] = "{correct: problemCorrect, incorrect: !problemCorrect}">
         <p>{{problemCorrect? 'Correct!' : 'Incorrect answer. Please try again'}}</p>
