--- a/savis4/src/app/problems/problems-components/bar-chart/bar-chart.component.html
+++ b/savis4/src/app/problems/problems-components/bar-chart/bar-chart.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
+<!--Bar Chart Component-->
 <div class="bar-chart-container">
   <h1 class="title">{{ 'problems_bar_chart_title' | translate }}</h1>
   <div button="back" routerLink="/problems" class="back-button">
@@ -33,11 +33,15 @@
         [ngClass]="{ correct: answerIsCorrect, incorrect: !answerIsCorrect }"
       >
         <p>{{ answerIsCorrect ? 'Correct!' : 'Incorrect answer. Please try again!' }}</p>
-        <p *ngIf="!answerIsCorrect">
-          Correct answer: {{ correctAnswer }}
-        </p>
-        <!-- Hide answer button -->
-        <button (click)="hideAnswer()" class="hide-button">Hide Answer</button>
+        <div class="answer-buttons">
+          <button *ngIf="!answerIsCorrect" (click)="toggleCorrectAnswer()" class="show-answer-button">
+            {{ showCorrectAnswer ? 'Hide Correct Answer' : 'Show Correct Answer' }}
+          </button>
+          <p *ngIf="!answerIsCorrect && showCorrectAnswer" class="correct-answer-text">
+            Correct answer: {{ correctAnswer }}
+          </p>
+          <button (click)="hideAnswer()" class="hide-button">Hide Feedback</button>
+        </div>
       </div>
       <!-- Generate new problem button -->
       <button class="generate-button" (click)="generateNewProblem()">Generate New Problem</button>
@@ -45,11 +49,35 @@
 
     <!-- Right side: Bar Chart -->
     <div class="chart-container">
-      <canvas #inputChart width="900" height="400"></canvas>
+      <canvas #inputChart width="900" height="700"></canvas>
     </div>
   </div>
+  
+  <!-- Drawing workspace -->
+  <div class="workspace-container">
+    <h2>Workspace</h2>
+    <div class="canvas-wrapper">
+      <canvas id="drawingCanvas" width="800" height="400" style="border:1px solid #000000;"></canvas>
+      <textarea id="textOverlay" class="text-overlay" placeholder="Click to type..." aria-label="Workspace text overlay"></textarea>
+    </div>
+    <div class="workspace-controls">
+        <div class="color-buttons">
+          <button class="color-button black" data-color="#000000"></button>
+          <button class="color-button red" data-color="#FF0000"></button>
+          <button class="color-button green" data-color="#00FF00"></button>
+          <button class="color-button blue" data-color="#0000FF"></button>
+          <button class="color-button yellow" data-color="#FFFF00"></button>
+        </div>
+        <div class="mode-buttons">
+          <button id="drawButton" class="workspace-button active">Draw</button>
+          <button id="textButton" class="workspace-button">Text</button>
+          <button id="eraserButton" class="workspace-button">Eraser</button>
+          <button id="clearButton" class="workspace-button">Clear All</button>
+        </div>
+      </div>
+  </div>
 </div>
-
+<!-- Footer -->
 <footer class="static-footer">
   {{ 'nav_copyright' | translate }}
 </footer>
